tests/testcases/invalid/semantic/88_prefix_increment_literal.ciel
// Error: prefix increment on literal
int main() {
    // Error: literal is rvalue, prefix ++ requires lvalue
    ++42;

    return 0;
}
